...
                ) {
                    MiniPlayerIconButton(Icons.Rounded.PlayArrow, "Play")
                    Spacer(modifier = Modifier.width(10.dp))
                    Row(
                        modifier = Modifier
                            .weight(1f)
                            .testTag("emptyMiniPlayerMainArea")
                            .clip(RoundedCornerShape(10.dp))
                            .clickable(onClick = onMainAreaClick)
                            .padding(vertical = 4.dp),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Column {
...
